Internationalization + actions for messages
- Internationalization of UI relevant texts
- Better support for the error/warning/info/status messages received
from the device

Signed-off-by: Bernhard Bauer <bern77@gmail.com>